terraform/securitygroup.tf
resource "aws_security_group" "demo-sg" {
name = "sec-group"
description= "it allows ssh, all, http"
ingress{
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
from_port = 0
to_port = -1
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
}
